--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".DevicesControlActivity.UnitAvtivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
