--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -37,9 +38,19 @@
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"
             />
+
         <activity android:name=".DevicesControlActivity.UnitJingTaiActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".DevicesControlActivity.UnitDaLianActivity" />
+
+        <activity android:name=".DevicesControlActivity.UnitDaLianActivity"
+            android:screenOrientation="portrait"
+            />
+
+        <activity android:name=".DevicesControlActivity.AhuDeviceDataActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
+
+
 
 </manifest>
