加入大连友谊全部数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity android:name=".DevicesControlActivity.AhuDeviceDataActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".DevicesControlActivity.PauDeviceDataActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 
