加入了手抄器监控单个设备

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".DevicesControlActivity.PauDeviceDataActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".DevicesControlActivity.UnitMonitorActivity" />
     </application>
 
 
