加入天津三院设备

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,6 @@
             android:screenOrientation="portrait"
             />
         <activity android:name=".DevicesControlActivity.UnitMonitorActivity" />
+        <activity android:name=".DevicesControlActivity.UnitTianJinSanYuanActivity" />
     </application>
-
-
-
 </manifest>
