开元骨科完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,5 +54,8 @@
             />
         <activity android:name=".DevicesControlActivity.UnitMonitorActivity" />
         <activity android:name=".DevicesControlActivity.UnitTianJinSanYuanActivity" />
+        <activity android:name=".DevicesControlActivity.UnitKaiYuanGuKeActivity" />
+        <activity android:name=".DevicesControlActivity.AhukaiYuanDataActivity" />
+        <activity android:name=".DevicesControlActivity.PauKaiYuanDataActivity" />
     </application>
 </manifest>
